<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/background_layout"
    tools:context=".ApplicationDescription">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scroll"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView android:text="@string/job_position"
                android:id="@+id/jobPosition"
                android:layout_marginTop="@dimen/margin_top_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="@dimen/padding_left"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/text_size"/>

            <TextView android:text="@string/name"
                android:id="@+id/companyName"
                android:layout_marginTop="@dimen/margin_top_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="@dimen/padding_left"
                android:layout_below="@+id/jobPosition"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"/>

            <TextView android:text="@string/industry"
                android:id="@+id/companyIndustry"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="@dimen/padding_left"
                android:layout_below="@+id/companyName"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"/>

            <TextView android:text="@string/date_posted"
                android:id="@+id/datePosted"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="@dimen/padding_left"
                android:layout_below="@+id/companyIndustry"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"/>

            <TextView android:text="@string/description"
                android:id="@+id/jobDescription"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="@dimen/padding_left"
                android:layout_below="@+id/datePosted"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"/>

            <TextView android:text="@string/salary"
                android:id="@+id/salary"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="@dimen/padding_left"
                android:layout_below="@+id/jobDescription"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"/>

            <TextView android:text="@string/location"
                android:id="@+id/jobLocation"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="@dimen/padding_left"
                android:layout_below="@+id/salary"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"/>

            <TextView android:text="@string/job_type"
                android:id="@+id/jobType"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="@dimen/padding_left"
                android:layout_below="@+id/jobLocation"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"/>

            <TextView android:text="@string/job_duration"
                android:id="@+id/jobDuration"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="@dimen/padding_left"
                android:layout_below="@+id/jobType"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"/>

            <TextView android:text="@string/type_of_contract"
                android:id="@+id/typeOfContract"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="@dimen/padding_left"
                android:layout_below="@+id/jobDuration"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"/>

            <Button
                android:text="@string/backListApplications"
                android:id="@+id/backButton"
                android:layout_width="@dimen/width_buttons"
                android:layout_height="@dimen/button_height"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/typeOfContract"
                android:layout_margin="@dimen/margin_top"
                android:onClick="goBack"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                android:background="@drawable/background_color"
                android:textStyle="bold"
                />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>