<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/background_layout"
    tools:context=".ViewStudent">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scroll"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:text="@string/name"
                android:id="@+id/studentName"
                android:layout_marginTop="@dimen/margin_top_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="@dimen/padding_left"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"/>

            <TextView android:text="@string/description"
                android:id="@+id/studentDescription"
                android:layout_marginTop="@dimen/margin_top_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="@dimen/padding_left"
                android:layout_below="@+id/studentName"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"/>

            <TextView android:text="@string/industry"
                android:id="@+id/studentIndustry"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="@dimen/padding_left"
                android:layout_below="@+id/studentDescription"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"/>


            <TextView android:text="@string/technical_skills"
                android:id="@+id/techSkills"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="@dimen/padding_left"
                android:layout_below="@+id/studentIndustry"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"/>

            <TextView android:text="@string/experience"
                android:id="@+id/yearsExperience"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="@dimen/padding_left"
                android:layout_below="@+id/techSkills"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"/>

            <TextView android:text="@string/degree"
                android:id="@+id/typeOfDegree"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="@dimen/padding_left"
                android:layout_below="@+id/yearsExperience"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"/>

            <TextView android:text="@string/interests"
                android:id="@+id/interests"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="@dimen/padding_left"
                android:layout_below="@+id/typeOfDegree"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"/>

            <TextView android:text="@string/current_company"
                android:id="@+id/currentCompany"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="@dimen/padding_left"
                android:layout_below="@+id/interests"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"/>

            <TextView android:text="@string/languages"
                android:id="@+id/languages"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="@dimen/padding_left"
                android:layout_below="@+id/currentCompany"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"/>

            <Button
                android:text="@string/send_button"
                android:id="@+id/sendButton"
                android:layout_width="@dimen/width_buttons"
                android:layout_height="@dimen/button_height"
                android:layout_margin="@dimen/margin_top_title"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/languages"
                android:onClick="sendMessage"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                android:background="@drawable/background_color"
                android:textStyle="bold"
                />
            <Button
                android:text="@string/save_student_button"
                android:id="@+id/saveButton"
                android:layout_width="@dimen/width_buttons"
                android:layout_height="@dimen/button_height"
                android:layout_margin="@dimen/margin_top"
                android:layout_below="@+id/sendButton"
                android:layout_centerHorizontal="true"
                android:onClick="saveStudent"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                android:background="@drawable/background_color"
                android:textStyle="bold"
                />
            <Button
                android:text="@string/back_button"
                android:id="@+id/backButton"
                android:layout_width="@dimen/width_buttons"
                android:layout_height="@dimen/button_height"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/saveButton"
                android:layout_margin="@dimen/margin_top"
                android:onClick="backToResults"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                android:background="@drawable/background_color"
                android:textStyle="bold"
                />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>